# engen

./: .gitignore  Agentic_Workflow_Engineering_Template.md  Agentic_Workflow_Engineeting_Template.md  ArtifactGenerationPromptTemplate.md  CONNECTOR_VS_CUSTOM_INGESTION.md  DEPLOYMENT_GUIDE.md  DESIGN_DOCUMENT.md  DESIGN_DOCUMENT_VERTEX_SEARCH.md  Enterprise Knowledge Intelligence Framework-Sharepoint Version 2.1.md  GITHUB_MCP_SETUP_WALKTHROUGH.md  INGESTION_COMPARISON.md  INGESTION_PIPELINES_WALKTHROUGH.md  KROKI_DEPLOYMENT.md  PATTERN_FACTORY_WALKTHROUGH.md  README.md  REALTIME_COMPONENT_LOOKUP_WALKTHROUGH.md  Readme-React-Pattern.md  SPA_DESIGN_AND_DEPLOYMENT.md  agentcatalyst-agentscli-architecture.md  agentcatalyst-agentscli-developer-guide.md  agentcatalyst-archetype-agnostic-developer-guide.md  agentcatalyst-architecture-archetype-agnostic.md  agentcatalyst-architecture.md  agentcatalyst-architecture_ga.md  agentcatalyst-developer-guide.md  agentcatalyst-document-inventory.md  agentcatalyst-ga-developer-guide.md  agentcatalyst-operations-greenfield_runbook.md  agentcatalyst-operations-runbook-both-options.md  agentforge-ga-only-sequence-diagrams.md  agentforge-speckit-future-architecture.md  app-blueprint-md-template-and-fnol-example.md  arb-review-core-agentcatalyst.md  blueprint-advisor-sequence.mmd  born-compliant-platform-sequence-diagrams.md  csa-tsa-speckit-architecture.md  csa-tsa-speckit-developerguide.md  csa-tsa-speckit-operating-playbook.md  deploy_agent.py  governance-guardian-architecture.md  (+3 more)
sdlc-accelerators/: .gitignore  CLAUDE.md  README.md  _srcpaths.py  conftest.py  pyproject.toml
sdlc-accelerators/.harness/: pipeline.yaml
sdlc-accelerators/.specify/: preset.yml
sdlc-accelerators/brownfield/: README.md
sdlc-accelerators/catalog-sources/: README.md
sdlc-accelerators/commands/: accelerator.assess.md  accelerator.blueprint.md  accelerator.generate.md  accelerator.ingest-epic.md  accelerator.refresh.md
sdlc-accelerators/docs/: ADK-Standards-Compliance.md  ARB-Review-Epic-to-Spec.md  ARB-Review-SDLCAccelerators-Full.md  BUILD-REPORT-Assembly.md  BUILD-REPORT-Blueprint-Artifact-Store.md  BUILD-REPORT-Discover-Integrations.md  BUILD-REPORT-Eraser-MCP-Rendering.md  BUILD-REPORT-Generation-Gate.md  BUILD-REPORT-Live-LLM-Reasoning.md  BUILD-REPORT-Live-Reasoning-Wiring.md  BUILD-REPORT-Live-Service-Seams.md  BUILD-REPORT-MCP-Auth.md  BUILD-REPORT-PDF-Translation.md  (+15 more)
(+559 files in other folders)
