[project]
name = "sdlc-accelerators"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2", "jinja2", "jsonschema", "pyyaml", "pyjwt[crypto]", "reportlab", "pdfplumber",
    # ADK Agent Coding Standards runtime: §2 reliability, §3 perf, §5 observability
    "tenacity", "structlog", "httpx", "opentelemetry-api", "opentelemetry-sdk",
    "google-adk>=2.3",  # ADK SDK — required by the brownfield/greenfield orchestrator integration tests
]

[tool.ruff]
line-length = 88  # ADK Agent Coding Standards §1.2
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["UP042"]  # str+Enum is an intentional, widely-used pattern

[tool.ruff.lint.per-file-ignores]
# Multi-service layout requires sys.path insertion before imports.
"tests/*" = ["E402", "E501", "E702"]
"**/tests/**" = ["E402", "E501", "E702"]  # nested service test dirs
"services/*/src/**" = ["E402", "E501"]
"brownfield/tests/*" = ["E402", "E501", "E702"]
"brownfield/src/**" = ["E402", "E501"]

[tool.pytest.ini_options]
testpaths = ["tests", "brownfield/tests"]
filterwarnings = [
    "ignore:SequentialAgent is deprecated.*:DeprecationWarning",
    "ignore:BaseAgentConfig is deprecated.*:DeprecationWarning",
]
python_files = "test_*.py"

[tool.mypy]
python_version = "3.12"
strict = true
namespace_packages = true
explicit_package_bases = true
ignore_missing_imports = true
